Add material module to application

--- a/Frontend/real-manager/src/app/login/login.component.html
+++ b/Frontend/real-manager/src/app/login/login.component.html
@@ -1,10 +1,12 @@
 <div class="login-container">
   <form [formGroup]="loginForm" class="form-container">
+    <label>Real Manager</label>
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Email" type="email" />
     </mat-form-field>
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Password" type="password"/>
     </mat-form-field>
+    <button mat-button type="submit">Log in</button>
   </form>
 </div>
