Add theme for the application

--- a/Frontend/real-manager/src/app/login/login.component.html
+++ b/Frontend/real-manager/src/app/login/login.component.html
@@ -7,6 +7,7 @@
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Password" type="password"/>
     </mat-form-field>
-    <button mat-button type="submit">Log in</button>
+    <button mat-raised-button color="primary" type="submit">Sign in</button>
   </form>
+  <button mat-button color="primary">Sign up</button>
 </div>
