Create signup component

--- a/Frontend/real-manager/src/app/login/login.component.html
+++ b/Frontend/real-manager/src/app/login/login.component.html
@@ -9,5 +9,5 @@
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Sign in</button>
   </form>
-  <button mat-button color="primary">Sign up</button>
+  <a mat-button color="primary" routerLink="/signup"  routerLinkActive="active">Sign up</a>
 </div>
