--- a/Frontend/real-manager/src/app/signup/signup.component.html
+++ b/Frontend/real-manager/src/app/signup/signup.component.html
@@ -1,1 +1,16 @@
-<p>signup works!</p>
+<div class="signup-container">
+    <form [formGroup]="signUpForm" class="form-container" (ngSubmit)="onSubmitSignUpForm(signUpForm.value)">
+      <label>Real Manager</label>
+      <mat-form-field>
+        <input matInput placeholder="Email" type="email" formControlName="email"/>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Password" type="password" formControlName="password"/>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Team name" type="text" formControlName="teamName"/>
+      </mat-form-field>
+      <button mat-raised-button color="primary" type="submit">Sign up</button>
+    </form>
+  </div>
+  
