--- a/Frontend/src/app/shared/components/main-header/main-header.component.html
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.html
@@ -1,2 +1,10 @@
-<p>main-header works!</p>
+<section class="container-header">
+    <span class="logo-real-manager">Real Manager</span>
+    <div>
+        <button mat-raised-button color="primary">League</button>
+        <button mat-raised-button color="primary">Squad</button>
+        <button mat-raised-button color="primary">Matches</button>
+        <button mat-raised-button color="primary">Sign out</button>
+    </div>
+</section>
 <router-outlet></router-outlet>
