--- a/Frontend/src/app/league/league.component.html
+++ b/Frontend/src/app/league/league.component.html
@@ -1,1 +1,58 @@
-<p>league works!</p>
+<section class="section-container">
+    <h1>Division 1</h1>
+    <table mat-table [dataSource]="leagueDataSource">
+    
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> Position </th>
+            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="teamName">
+            <th mat-header-cell *matHeaderCellDef> Team </th>
+            <td mat-cell *matCellDef="let element"> {{element.teamName}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="matches">
+            <th mat-header-cell *matHeaderCellDef> Matches </th>
+            <td mat-cell *matCellDef="let element"> {{element.matches}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="won">
+            <th mat-header-cell *matHeaderCellDef> Won </th>
+            <td mat-cell *matCellDef="let element"> {{element.won}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="drawn">
+            <th mat-header-cell *matHeaderCellDef> Drawn </th>
+            <td mat-cell *matCellDef="let element"> {{element.drawn}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="lost">
+            <th mat-header-cell *matHeaderCellDef> Lost </th>
+            <td mat-cell *matCellDef="let element"> {{element.lost}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="goalsFor">
+            <th mat-header-cell *matHeaderCellDef> GF </th>
+            <td mat-cell *matCellDef="let element"> {{element.goalsFor}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="goalsAgainst">
+            <th mat-header-cell *matHeaderCellDef> GA </th>
+            <td mat-cell *matCellDef="let element"> {{element.goalsAgainst}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="goalDiference">
+            <th mat-header-cell *matHeaderCellDef> GD </th>
+            <td mat-cell *matCellDef="let element"> {{element.goalDiference}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="points">
+            <th mat-header-cell *matHeaderCellDef> Points </th>
+            <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</section>
