--- a/Frontend/src/app/squad/squad.component.html
+++ b/Frontend/src/app/squad/squad.component.html
@@ -1,1 +1,60 @@
-<p>squad works!</p>
+<section class="section-container">
+    <h1>IGTI F.C.</h1>
+    <table mat-table [dataSource]="squadDataSource">
+    
+        <ng-container matColumnDef="starter">
+            <th mat-header-cell *matHeaderCellDef> Starter </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-checkbox [(ngModel)]="element.starter"></mat-checkbox>
+            </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> Position </th>
+            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="overall">
+            <th mat-header-cell *matHeaderCellDef> Overall </th>
+            <td mat-cell *matCellDef="let element"> {{element.overall}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="pace">
+            <th mat-header-cell *matHeaderCellDef> Pace </th>
+            <td mat-cell *matCellDef="let element"> {{element.pace}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="shoot">
+            <th mat-header-cell *matHeaderCellDef> Shoot </th>
+            <td mat-cell *matCellDef="let element"> {{element.shoot}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="pass">
+            <th mat-header-cell *matHeaderCellDef> Pass </th>
+            <td mat-cell *matCellDef="let element"> {{element.pass}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="drible">
+            <th mat-header-cell *matHeaderCellDef> Drible </th>
+            <td mat-cell *matCellDef="let element"> {{element.drible}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="defence">
+            <th mat-header-cell *matHeaderCellDef> Defence </th>
+            <td mat-cell *matCellDef="let element"> {{element.defence}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="physical">
+            <th mat-header-cell *matHeaderCellDef> Physical </th>
+            <td mat-cell *matCellDef="let element"> {{element.physical}} </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</section>
