--- a/Frontend/src/app/matches/matches.component.html
+++ b/Frontend/src/app/matches/matches.component.html
@@ -1,1 +1,23 @@
-<p>matches works!</p>
+<section class="section-container">
+    <h1 class="title">Matches</h1>
+    <table mat-table class ="matches-table" [dataSource]="matchesDataSource">
+    
+        <ng-container matColumnDef="homeTeam">
+            <th mat-header-cell *matHeaderCellDef class="home-team"> Home Team </th>
+            <td mat-cell *matCellDef="let element" class="home-team"> {{element.homeTeam}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="finalResult">
+            <th mat-header-cell *matHeaderCellDef class="final-result"> Final Result </th>
+            <td mat-cell *matCellDef="let element" class="final-result"> {{element.finalResult}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="awayTeam">
+            <th mat-header-cell *matHeaderCellDef class="away-team"> awayTeam </th>
+            <td mat-cell *matCellDef="let element" class="away-team"> {{element.awayTeam}} </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</section>
