Add correct behaviour to match row

--- a/Frontend/src/app/matches/matches.component.scss
+++ b/Frontend/src/app/matches/matches.component.scss
@@ -7,16 +7,14 @@
     .matches-table {
         width: 40%;
 
-        .home-team {
-            text-align: start;
+        .resumo-partida {
+            display: flex;
+            justify-content: space-between;
         }
 
-        .final-result {
-            text-align: center;
-        }
 
-        .away-team {
-            text-align: end;
+        .match-button {
+            width: 100%;
         }
     }
 }
