--- a/Frontend/src/app/matches/matches.component.html
+++ b/Frontend/src/app/matches/matches.component.html
@@ -3,20 +3,23 @@
     <table mat-table class ="matches-table" [dataSource]="matchesDataSource">
     
         <ng-container matColumnDef="homeTeam">
-            <th mat-header-cell *matHeaderCellDef class="home-team"> Home Team </th>
-            <td mat-cell *matCellDef="let element" class="home-team"> {{element.homeTeam}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="finalResult">
-            <th mat-header-cell *matHeaderCellDef class="final-result"> Final Result </th>
-            <td mat-cell *matCellDef="let element" class="final-result"> {{element.finalResult}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="awayTeam">
-            <th mat-header-cell *matHeaderCellDef class="away-team"> awayTeam </th>
-            <td mat-cell *matCellDef="let element" class="away-team"> {{element.awayTeam}} </td>
-        </ng-container>
-    
+            <th mat-header-cell *matHeaderCellDef>
+                <div class="resumo-partida">
+                    <span>Home Team</span>
+                    <span>Final Result</span>
+                    <span>Away Team</span>
+                </div>
+            </th>
+            <td mat-cell *matCellDef="let element" >
+                <button mat-button class="match-button">
+                    <div class="resumo-partida">
+                        <span>{{element.homeTeam}}</span>
+                        <span>{{element.finalResult}}</span>
+                        <span>{{element.awayTeam}}</span>
+                    </div>
+                </button>
+            </td>
+        </ng-container>    
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateMatchDetails(row)"></tr>
     </table>
