--- a/Frontend/src/app/matches/matches.component.html
+++ b/Frontend/src/app/matches/matches.component.html
@@ -21,6 +21,6 @@
             </td>
         </ng-container>    
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="navigateMatchDetails(row)"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['./', row.id]"></tr>
     </table>
 </section>
