Create login service and change division data

--- a/Frontend/src/app/league/league.component.html
+++ b/Frontend/src/app/league/league.component.html
@@ -1,5 +1,5 @@
 <section class="section-container">
-    <h1>Division 1</h1>
+    <h1>Division {{division}}</h1>
     <table mat-table [dataSource]="leagueDataSource">
     
         <ng-container matColumnDef="position">
