--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -3,12 +3,13 @@
     <h1 class="logo-header">Real Manager</h1>
     <form [formGroup]="loginForm" class="form-container" (ngSubmit)="signin(loginForm.value)">
       <mat-form-field>
-        <input matInput placeholder="Email" type="email" />
+        <input matInput placeholder="Email" type="email" formControlName="email"/>
       </mat-form-field>
       <mat-form-field class="form__label-password">
-        <input matInput placeholder="Password" type="password"/>
+        <input matInput placeholder="Password" type="password" formControlName="password"/>
       </mat-form-field>
       <button mat-raised-button color="primary" type="submit">Sign in</button>
+      <span *ngIf="usarioSenhaInvalido">Usuário e/ou senha inválido</span>
     </form>
     <a mat-button color="primary" routerLink="/signup"  routerLinkActive="active">Sign up</a>
   </div>
