--- a/Frontend/src/app/squad/squad.component.html
+++ b/Frontend/src/app/squad/squad.component.html
@@ -1,5 +1,5 @@
 <section class="section-container">
-    <h1>IGTI F.C.</h1>
+    <h1>{{teamName}}</h1>
     <table mat-table [dataSource]="squadDataSource">
     
         <ng-container matColumnDef="starter">
@@ -11,7 +11,7 @@
     
         <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> Position </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td mat-cell *matCellDef="let element"> {{getPlayerPosition(element.position)}} </td>
         </ng-container>
     
         <ng-container matColumnDef="name">
