--- a/Frontend/src/app/squad/squad.component.html
+++ b/Frontend/src/app/squad/squad.component.html
@@ -11,50 +11,51 @@
     
         <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef> Position </th>
-            <td mat-cell *matCellDef="let element"> {{getPlayerPosition(element.position)}} </td>
+            <td mat-cell *matCellDef="let element">{{getPlayerPosition(element.position)}}</td>
         </ng-container>
     
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="overall">
             <th mat-header-cell *matHeaderCellDef> Overall </th>
-            <td mat-cell *matCellDef="let element"> {{element.overall}} </td>
+            <td mat-cell *matCellDef="let element"> <strong>{{element.overall}}</strong></td>
         </ng-container>
 
         <ng-container matColumnDef="pace">
             <th mat-header-cell *matHeaderCellDef> Pace </th>
-            <td mat-cell *matCellDef="let element"> {{element.pace}} </td>
+            <td mat-cell *matCellDef="let element">{{element.pace}}</td>
         </ng-container>
     
         <ng-container matColumnDef="shoot">
             <th mat-header-cell *matHeaderCellDef> Shoot </th>
-            <td mat-cell *matCellDef="let element"> {{element.shoot}} </td>
+            <td mat-cell *matCellDef="let element">{{element.shoot}}</td>
         </ng-container>
 
         <ng-container matColumnDef="pass">
             <th mat-header-cell *matHeaderCellDef> Pass </th>
-            <td mat-cell *matCellDef="let element"> {{element.pass}} </td>
+            <td mat-cell *matCellDef="let element">{{element.pass}}</td>
         </ng-container>
 
         <ng-container matColumnDef="drible">
             <th mat-header-cell *matHeaderCellDef> Drible </th>
-            <td mat-cell *matCellDef="let element"> {{element.drible}} </td>
+            <td mat-cell *matCellDef="let element">{{element.drible}}</td>
         </ng-container>
 
         <ng-container matColumnDef="defence">
             <th mat-header-cell *matHeaderCellDef> Defence </th>
-            <td mat-cell *matCellDef="let element"> {{element.defence}} </td>
+            <td mat-cell *matCellDef="let element">{{element.defence}}</td>
         </ng-container>
 
         <ng-container matColumnDef="physical">
             <th mat-header-cell *matHeaderCellDef> Physical </th>
-            <td mat-cell *matCellDef="let element"> {{element.physical}} </td>
+            <td mat-cell *matCellDef="let element">{{element.physical}}</td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    <button mat-raised-button color="primary" class="save-button" (click)="saveStarterTeam()">Save squad</button>
 </section>
