--- a/Frontend/src/app/league/league.component.html
+++ b/Frontend/src/app/league/league.component.html
@@ -42,9 +42,9 @@
             <td mat-cell *matCellDef="let element"> {{element.goalsAgainst}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="goalDiference">
+        <ng-container matColumnDef="goalDifference">
             <th mat-header-cell *matHeaderCellDef> GD </th>
-            <td mat-cell *matCellDef="let element"> {{element.goalDiference}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.goalDifference}} </td>
         </ng-container>
 
         <ng-container matColumnDef="points">
