--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -11,6 +11,6 @@
       <button mat-raised-button color="primary" type="submit">Sign in</button>
       <span *ngIf="usarioSenhaInvalido">Usuário e/ou senha inválido</span>
     </form>
-    <a mat-button color="primary" routerLink="/signup"  routerLinkActive="active">Sign up</a>
+    <button mat-button color="primary" routerLink="/signup"  routerLinkActive="active">Sign up</button>
   </div>
 </div>
