--- a/Frontend/src/app/login/login.component.scss
+++ b/Frontend/src/app/login/login.component.scss
@@ -16,6 +16,7 @@
         justify-content: center;
         width: 30%;
         height: 70%;
+        min-width: 260px;
 
         .logo-header {
             margin: 0 0 10% 0;
