--- a/Frontend/src/app/league/league.component.scss
+++ b/Frontend/src/app/league/league.component.scss
@@ -2,4 +2,19 @@
     display: flex;
     flex-direction: column;
     margin: 20px 10%;
+
+    .table-container {
+        overflow: auto;
+        .league-table {
+            width: 100%;
+            min-width: 400px;
+
+            .column-name {
+                min-width: 80px;
+            }
+            th {
+                min-width: 40px;
+            }
+        }
+    }
 }
