Change footer to make more useful and beautifull

--- a/Frontend/src/app/shared/components/main-header/main-header.component.html
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.html
@@ -9,11 +9,29 @@
 </section>
 <router-outlet></router-outlet>
 <div style="height: 10%;"></div>
-<section class="container-footer">
-    <nav>
-        <button mat-raised-button color="primary" routerLink="./league" routerLinkActive="active">L</button>
-        <button mat-raised-button color="primary" routerLink="./squad" routerLinkActive="active">S</button>
-        <button mat-raised-button color="primary" routerLink="./matches" routerLinkActive="active">M</button>
-        <button mat-raised-button color="primary" (click)="logout()">O</button>
-    </nav>
-</section>
+<nav class="container-footer">
+    <button mat-button color="primary" routerLink="./league" routerLinkActive="active">
+        <div class="footer__button">
+            <mat-icon svgIcon="assessment" aria-hidden="false" aria-label="League table"></mat-icon>
+            League
+        </div>
+    </button>
+    <button mat-button color="primary" routerLink="./squad" routerLinkActive="active">
+        <div class="footer__button">
+            <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="League table"></mat-icon>
+            Squad
+        </div>
+    </button>
+    <button mat-button color="primary" routerLink="./matches" routerLinkActive="active">
+        <div class="footer__button">
+            <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="League table"></mat-icon>
+            Matches
+        </div>
+    </button>
+    <button mat-button color="primary" (click)="logout()">
+        <div class="footer__button">
+            <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="League table"></mat-icon>
+            Log out
+        </div>
+    </button>
+</nav>
