Add css class to change opacity of nav itens

--- a/Frontend/src/app/shared/components/main-header/main-header.component.scss
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.scss
@@ -17,12 +17,17 @@
     padding: 5px 0 0 0;
 
     button {
+        opacity: 50%;
         .footer__button{
             height: 100%;
             align-items: center;
             display: flex;
             flex-direction: column;
         }
+    }
+
+    .active {
+        opacity: 100%;
     }
 }
 
