--- a/Frontend/src/app/squad/squad.component.html
+++ b/Frontend/src/app/squad/squad.component.html
@@ -1,61 +1,64 @@
 <section class="section-container">
     <h1>{{teamName}}</h1>
-    <table mat-table [dataSource]="squadDataSource">
+    <div class="table-container">
+        <table mat-table [dataSource]="squadDataSource"  class="league-table">
     
-        <ng-container matColumnDef="starter">
-            <th mat-header-cell *matHeaderCellDef id="header-starter"> Starter </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-checkbox [(ngModel)]="element.starter" aria-labelledby="header-starter"></mat-checkbox>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="starter" sticky>
+                <th mat-header-cell *matHeaderCellDef id="header-starter"> Starter </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-checkbox [(ngModel)]="element.starter" aria-labelledby="header-starter"></mat-checkbox>
+                </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="position" sticky>
+                <th mat-header-cell *matHeaderCellDef> Position </th>
+                <td mat-cell *matCellDef="let element">{{getPlayerPosition(element.position)}}</td>
+            </ng-container>
+        
+            <ng-container matColumnDef="name" sticky>
+                <th mat-header-cell *matHeaderCellDef class="column-name"> Name </th>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            </ng-container>
     
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> Position </th>
-            <td mat-cell *matCellDef="let element">{{getPlayerPosition(element.position)}}</td>
-        </ng-container>
+            <ng-container matColumnDef="overall" sticky>
+                <th mat-header-cell *matHeaderCellDef> Overall </th>
+                <td mat-cell *matCellDef="let element"> <strong>{{element.overall}}</strong></td>
+            </ng-container>
     
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="overall">
-            <th mat-header-cell *matHeaderCellDef> Overall </th>
-            <td mat-cell *matCellDef="let element"> <strong>{{element.overall}}</strong></td>
-        </ng-container>
-
-        <ng-container matColumnDef="pace">
-            <th mat-header-cell *matHeaderCellDef> Pace </th>
-            <td mat-cell *matCellDef="let element">{{element.pace}}</td>
-        </ng-container>
+            <ng-container matColumnDef="pace">
+                <th mat-header-cell *matHeaderCellDef> Pace </th>
+                <td mat-cell *matCellDef="let element">{{element.pace}}</td>
+            </ng-container>
+        
+            <ng-container matColumnDef="shoot">
+                <th mat-header-cell *matHeaderCellDef> Shoot </th>
+                <td mat-cell *matCellDef="let element">{{element.shoot}}</td>
+            </ng-container>
     
-        <ng-container matColumnDef="shoot">
-            <th mat-header-cell *matHeaderCellDef> Shoot </th>
-            <td mat-cell *matCellDef="let element">{{element.shoot}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="pass">
-            <th mat-header-cell *matHeaderCellDef> Pass </th>
-            <td mat-cell *matCellDef="let element">{{element.pass}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="drible">
-            <th mat-header-cell *matHeaderCellDef> Drible </th>
-            <td mat-cell *matCellDef="let element">{{element.drible}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="defence">
-            <th mat-header-cell *matHeaderCellDef> Defence </th>
-            <td mat-cell *matCellDef="let element">{{element.defence}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="physical">
-            <th mat-header-cell *matHeaderCellDef> Physical </th>
-            <td mat-cell *matCellDef="let element">{{element.physical}}</td>
-        </ng-container>
+            <ng-container matColumnDef="pass">
+                <th mat-header-cell *matHeaderCellDef> Pass </th>
+                <td mat-cell *matCellDef="let element">{{element.pass}}</td>
+            </ng-container>
     
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <ng-container matColumnDef="drible">
+                <th mat-header-cell *matHeaderCellDef> Drible </th>
+                <td mat-cell *matCellDef="let element">{{element.drible}}</td>
+            </ng-container>
+    
+            <ng-container matColumnDef="defence">
+                <th mat-header-cell *matHeaderCellDef> Defence </th>
+                <td mat-cell *matCellDef="let element">{{element.defence}}</td>
+            </ng-container>
+    
+            <ng-container matColumnDef="physical">
+                <th mat-header-cell *matHeaderCellDef> Physical </th>
+                <td mat-cell *matCellDef="let element">{{element.physical}}</td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
     <button mat-raised-button color="primary" class="save-button" (click)="saveStarterTeam()">Save squad</button>
 </section>
