--- a/Frontend/src/app/matches/match/match.component.scss
+++ b/Frontend/src/app/matches/match/match.component.scss
@@ -7,6 +7,7 @@
     .match-event {
         border: 1px solid #ccc;
         padding: 0 20px;
-        width: 30%;
+        width: 70%;
+        min-width: 260px;
     }
 }
