--- a/Frontend/src/app/league/league.component.html
+++ b/Frontend/src/app/league/league.component.html
@@ -2,60 +2,62 @@
     <h1>Division {{division}}</h1>
     <div class="table-container">
         <table mat-table [dataSource]="leagueDataSource" class="league-table">
-    
+
             <ng-container matColumnDef="position" sticky>
                 <th mat-header-cell *matHeaderCellDef> Position </th>
                 <td mat-cell *matCellDef="let element"> {{element.position}} </td>
             </ng-container>
-        
+
             <ng-container matColumnDef="teamName" sticky>
-                <th mat-header-cell *matHeaderCellDef  class="column-name"> Team </th>
+                <th mat-header-cell *matHeaderCellDef class="column-name"> Team </th>
                 <td mat-cell *matCellDef="let element"> {{element.teamName}} </td>
             </ng-container>
-        
+
+            <ng-container matColumnDef="points" sticky>
+                <th mat-header-cell *matHeaderCellDef>Points</th>
+                <td mat-cell *matCellDef="let element"> <strong>{{element.points}}</strong> </td>
+            </ng-container>
+
             <ng-container matColumnDef="matches">
                 <th mat-header-cell *matHeaderCellDef> Matches </th>
                 <td mat-cell *matCellDef="let element"> {{element.matches}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="won">
                 <th mat-header-cell *matHeaderCellDef> Won </th>
                 <td mat-cell *matCellDef="let element"> {{element.won}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="drawn">
                 <th mat-header-cell *matHeaderCellDef> Drawn </th>
                 <td mat-cell *matCellDef="let element"> {{element.drawn}} </td>
             </ng-container>
-        
+
             <ng-container matColumnDef="lost">
                 <th mat-header-cell *matHeaderCellDef> Lost </th>
                 <td mat-cell *matCellDef="let element"> {{element.lost}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="goalsFor">
                 <th mat-header-cell *matHeaderCellDef> GF </th>
                 <td mat-cell *matCellDef="let element"> {{element.goalsFor}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="goalsAgainst">
                 <th mat-header-cell *matHeaderCellDef> GA </th>
                 <td mat-cell *matCellDef="let element"> {{element.goalsAgainst}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="goalDifference">
                 <th mat-header-cell *matHeaderCellDef> GD </th>
                 <td mat-cell *matCellDef="let element"> {{element.goalDifference}} </td>
             </ng-container>
-    
-            <ng-container matColumnDef="points">
-                <th mat-header-cell *matHeaderCellDef> Points </th>
-                <td mat-cell *matCellDef="let element"> {{element.points}} </td>
-            </ng-container>
-        
+
+
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
-    
+
 </section>
