--- a/Frontend/src/app/shared/components/main-header/main-header.component.html
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.html
@@ -4,25 +4,25 @@
         <button mat-button color="primary" routerLink="./league" routerLinkActive="active">
             <div class="footer__button">
                 <mat-icon svgIcon="assessment" aria-hidden="false" aria-label="League table"></mat-icon>
-                League
+                <ng-container i18n>League</ng-container>
             </div>
         </button>
         <button mat-button color="primary" routerLink="./squad" routerLinkActive="active">
             <div class="footer__button">
                 <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="League table"></mat-icon>
-                Squad
+                <ng-container i18n>Squad</ng-container>
             </div>
         </button>
         <button mat-button color="primary" routerLink="./matches" routerLinkActive="active">
             <div class="footer__button">
                 <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="League table"></mat-icon>
-                Matches
+                <ng-container i18n>Matches</ng-container>
             </div>
         </button>
         <button mat-button color="primary" (click)="logout()">
             <div class="footer__button">
                 <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="League table"></mat-icon>
-                Log out
+                <ng-container i18n>Log out</ng-container>
             </div>
         </button>
     </nav>
