--- a/Frontend/src/app/shared/components/main-header/main-header.component.html
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.html
@@ -9,19 +9,25 @@
         </button>
         <button mat-button color="primary" routerLink="./squad" routerLinkActive="active">
             <div class="footer__button">
-                <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="League table"></mat-icon>
+                <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="Squad"></mat-icon>
                 <ng-container i18n>Squad</ng-container>
             </div>
         </button>
         <button mat-button color="primary" routerLink="./matches" routerLinkActive="active">
             <div class="footer__button">
-                <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="League table"></mat-icon>
+                <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="Matches"></mat-icon>
                 <ng-container i18n>Matches</ng-container>
+            </div>
+        </button>
+        <button mat-button color="primary" routerLink="./market" routerLinkActive="active">
+            <div class="footer__button">
+                <mat-icon svgIcon="monetization-on" aria-hidden="false" aria-label="Market"></mat-icon>
+                <ng-container i18n>Market</ng-container>
             </div>
         </button>
         <button mat-button color="primary" (click)="logout()">
             <div class="footer__button">
-                <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="League table"></mat-icon>
+                <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="Log out"></mat-icon>
                 <ng-container i18n>Log out</ng-container>
             </div>
         </button>
@@ -38,19 +44,25 @@
     </button>
     <button mat-button color="primary" routerLink="./squad" routerLinkActive="active">
         <div class="footer__button">
-            <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="League table"></mat-icon>
+            <mat-icon svgIcon="account-box" aria-hidden="false" aria-label="Squad"></mat-icon>
             Squad
         </div>
     </button>
     <button mat-button color="primary" routerLink="./matches" routerLinkActive="active">
         <div class="footer__button">
-            <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="League table"></mat-icon>
+            <mat-icon svgIcon="calendar-view-day" aria-hidden="false" aria-label="Matches"></mat-icon>
             Matches
+        </div>
+    </button>
+    <button mat-button color="primary" routerLink="./market" routerLinkActive="active">
+        <div class="footer__button">
+            <mat-icon svgIcon="monetization-on" aria-hidden="false" aria-label="Market"></mat-icon>
+            Market
         </div>
     </button>
     <button mat-button color="primary" (click)="logout()">
         <div class="footer__button">
-            <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="League table"></mat-icon>
+            <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="Log out"></mat-icon>
             Log out
         </div>
     </button>
