--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -9,7 +9,7 @@
         <input matInput placeholder="Password" type="password" formControlName="password" id="passwordInput"/>
       </mat-form-field>
       <button mat-raised-button color="primary" type="submit" id="loginButton">Sign in</button>
-      <span *ngIf="usarioSenhaInvalido" id="messageNotAllowed">Usuário e/ou senha inválido</span>
+      <span *ngIf="invalidUser" id="messageNotAllowed">Usuário e/ou senha inválido</span>
     </form>
     <button mat-button color="primary" routerLink="/signup"  routerLinkActive="active">Sign up</button>
   </div>
