--- a/Frontend/src/app/shared/components/main-header/main-header.component.html
+++ b/Frontend/src/app/shared/components/main-header/main-header.component.html
@@ -25,7 +25,7 @@
                 <ng-container i18n>Market</ng-container>
             </div>
         </button>
-        <button mat-button color="primary" (click)="logout()">
+        <button mat-button color="primary" (click)="logout()" data-cy='logoutButton'>
             <div class="footer__button">
                 <mat-icon svgIcon="keyboard-capslock" aria-hidden="false" aria-label="Log out"></mat-icon>
                 <ng-container i18n>Log out</ng-container>
